Round 4 optimizations